# animated-b-spline

./: BezierCurve.pro  CMakeLists.txt  README.md  SourcesLib.cmake  bezierinterpolator.cpp  bezierinterpolator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movingellipseitem.cpp  movingellipseitem.h
.github/workflows/: codeql-analysis.yml
android/: AndroidManifest.xml
android/res/values/: strings.xml
